trying to get graphs to work

--- a/index.html
+++ b/index.html
@@ -1,9 +1,36 @@
 <!DOCTYPE>
-<<html>
+<html>
 <head>
-	<title></title>
+	<title>Serve The Earth</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
+<h1> Serve The Earth</h1>
 <body>
+
+<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<script src='js/jquery.js'></script>
+
+<h2> Donate Today</h2>
+<div class="progressbar" data-perc="2">
+	<p> Make life a little easier, Donate a bike.</p>
+	<div class="bar"><span></span></div>
+	<div class="label"><span></span></div>
+</div>
+	<p> We need clean water, Donate a water filter system.</p>
+<div class="progressbar" data-perc="13">
+	<div class="bar color2"><span></span></div>
+	<div class="label"><span></span></div>
+</div>
+    <p> Help keep kids safe, Donate a first aid kit.</p>
+<div class="progressbar" data-perc="45">
+	<div class="bar color3"><span></span></div>
+	<div class="label"><span></span></div>
+</div>
+	<p> Feet matter, Donate a pair of shoes.</p>
+<div class="progressbar" data-perc="45">
+	<div class="bar color4"><span></span></div>
+	<div class="label"><span></span></div>
+</div>
 
 </body>
 </html>
