not sure about my css code for my ptag class

--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
 
 </div>
 
-      <h3 class='about'>Serving by giving!</h3>
-      <h6 class='ptag'>Serve The Earth is a webapp dedicated to helping others. We all want to serve others but sometimes we just dont know how or where to go? Serve The Earth allows everyone to serve by donating money to provide items to people that need them. Every week it seems there is another disaster somewhere in the world. Whenever you turn on the news we hear about earthquakes, fires, desises, deaths, and mulitple other disaters and that just doesnt include natural disaters. Oraphanges need materials, countries need bikes for transport, and others need a way to just drink clean water. Serve The Earth makes that possible. Every three weeks or so we will find a new cause to help out, and each cause will have specific items that you can donate money to that will help someone in need. It doesnt matter how much you donate even a doller will help the world know that we care.
+      
+      <h6 class='ptag'><h3>Serving by giving!</h3>
+        Serve The Earth is a webapp dedicated to helping others. We all want to serve others but sometimes we just dont know how or where to go? Serve The Earth allows everyone to serve by donating money to provide items to people that need them. Every week it seems there is another disaster somewhere in the world. Whenever you turn on the news we hear about earthquakes, fires, desises, deaths, and mulitple other disaters and that just doesnt include natural disaters. Oraphanges need materials, countries need bikes for transport, and others need a way to just drink clean water. Serve The Earth makes that possible. Every three weeks or so we will find a new cause to help out, and each cause will have specific items that you can donate money to that will help someone in need. It doesnt matter how much you donate even a doller will help the world know that we care.
 
 Donate Today!</h6>
 
