--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </div>
           <span class="goal">Raised: ${{progress.raised | number:0}} &nbsp;&compfn;&nbsp; Goal: ${{progress.goal | number:0}}</span>
           <a class="donate" ng-href="{{progress.link}}"> &raquo;</a>
-          <progressbar animate="false" value="dynamic" type="success"><b>{{progress}}%</b></progressbar>
+          <progressbar animate="false" value="dynamic" type="success"><b>{{progress.raised}}%</b></progressbar>
           <h6 class = 'donateButton2'>
           <input ng-model='donation.raised' placeholder='$'></h6>
           <h3><button class="donateButton" type="button" ng-click="random()">Donate!</button></h3>
