--- a/index.html
+++ b/index.html
@@ -38,15 +38,16 @@
           <span class="percent" ng-show="((progress.raised / progress.goal) * 100) <= 100">{{((progress.raised / progress.goal) * 100) | number:0}}%</span>
           <!-- show maximum percentage if total amount raised is > 100% -->
           <span class="percent" ng-show="((progress.raised / progress.goal) * 100) > 100">100%</span>
+         
           
       </div>
   </div>
           <span class="goal">Raised: ${{progress.raised | number:0}} &nbsp;&compfn;&nbsp; Goal: ${{progress.goal | number:0}}</span>
           <a class="donate" ng-href="{{progress.link}}"> &raquo;</a>
-          <progressbar animate="false" value="dynamic" type="success"><b>{{progress.raised}}%</b></progressbar>
+          <progressbar animate="false" value="progress.raised" type="success"><b>{{progress.raised}}%</b></progressbar>
           <h6 class = 'donateButton2'>
           <input ng-model='donation.raised' placeholder='$'></h6>
-          <h3><button class="donateButton" type="button" ng-click="random()">Donate!</button></h3>
+          <h3><button class="donateButton" type="button" ng-click="random()">Donate!</button> </h3>
 
   </div>
   
