finishing some css and html looks

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
    <div class='donateTo'>
 
    <p><a href ='#earthHead'><button class='donate' type='button'>Donate Today</button></a></p>
-
+   <h6 class='contact'>Contact us at letsserveearth@gmail.com</h6>
  </div>
 
 
